--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,17 @@
   <p><%=homeStartingContent[i].content.substring(0,100) + " ....."%><a href="<%=link+homeStartingContent[i].title%>">Read More</a></p>
 
 <%}%>
-
+<ul class="bg-bubbles">
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  </ul>
 
 <%-include('partials/footer')%>
