--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-
+<!-- 
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
@@ -6,4 +6,4 @@
   </div>
 </div>
 </body>
-</html>
+</html> -->
