--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,55 +1,41 @@
 <%-include('partials/header')%>
+<h1>Welcome Back!</h1>                
+<form class="form" method="post">
+                    <input type="text" placeholder="Email" name="email">
+                    <input type="password" placeholder="Password" name="password">
+                    <button type="submit" id="login-button">Login</button>
 
-    <h1>Login</h1>
-    <div class="container">
-
-        <form class="well form-horizontal" action=" " method="post" id="contact_form">
-            <fieldset>
-
-                <!-- Form Name -->
-                <legend>
-                    <center>
-                        <h2><b>Login</b></h2>
-                    </center>
-                </legend><br>
-                <!-- Text input-->
-                <div class="form-group">
-                    <label class="col-md-4 control-label">E-Mail</label>
-                    <div class="col-md-4 inputGroupContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                            <input name="email" placeholder="E-Mail Address" class="form-control" type="text">
-                        </div>
-                    </div>
+                </form>
+                <div class="instead">
+                    <p>Don't have an account? <a href="signup" type="button">Register</a></p>
+                    <p>Forgot password? <a href="forgotPassword" type="button">Forgot</a></p>
+                    
                 </div>
+                
+            </div>
 
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Password</label>
-                    <div class="col-md-4 inputGroupContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            <input name="password" placeholder="Password" class="form-control" type="password">
-                        </div>
-                    </div>
-                </div>
+        <ul class="bg-bubbles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            </ul>
+        </div>
 
-            
-                <!-- Success message -->
-                <div class="alert alert-success" role="alert" id="success_message">Success <i
-                        class="glyphicon glyphicon-thumbs-up"></i> Success!.</div>
-
-                <!-- Button -->
-                <div class="form-group">
-                    <label class="col-md-4 control-label"></label>
-                    <div class="col-md-4"><br>
-                        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<button type="submit"
-                            class="btn btn-warning">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSUBMIT <span
-                                class="glyphicon glyphicon-send"></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</button>
-                    </div>
-                </div>
-
-            </fieldset>
-        </form>
     </div>
-    </div><!-- /.container -->
-    <%-include('partials/footer')%>
+    <script>
+         $("#login-button").click(function(event){
+		 event.preventDefault();
+	 
+	 $('form').fadeOut(500);
+	 $('.wrapper').addClass('form-success');
+});
+    </script>
+  </body>
+</html>
