--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -13,8 +13,8 @@
         <p class="navbar-brand">DAILY JOURNAL</p>
       </div>
         <ul class="nav navbar-nav navbar-right">
-          <!-- 6 -->
-          <li id="home"><a href="/">HOME</a></li>
+          6 -->
+<!-- <li id="home"><a href="/">HOME</a></li>
           <li id="about"><a href="about">ABOUT US</a></li>
           <li id="contact"><a href="contact">CONTACT US</a></li>
           <li id="loginORlogout"><a href="user/<%=loginORlogout%>"><%=loginORlogout%></a></li>
@@ -23,4 +23,30 @@
   </nav>
 
   <body>
+    <div class="container"> -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/login.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="script" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
+  <title>Blog website</title>
+</head>
+
+<body>
+  <div class="topnav">
+    <a href="/">Home</a>
+    <a href="/contact">Contact</a>
+    <a href="/about">About</a>
+    <a href="/user/<%=loginORlogout%>">
+      <%=loginORlogout%>
+    </a>
+  </div>
+  <div class="wrapper">
     <div class="container">
+      <!-- <h1>Welcome</h1> -->
