removed httpOnly:true

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-  <div class="topnav">
+  <div class="topnav">5
     <a href="/">Home</a>
     <a href="/contact">Contact</a>
     <a href="/about">About</a>
