--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,41 +1,64 @@
-<%-include('partials/header')%>
-<h1>Welcome Back!</h1>                
-<form class="form" method="post">
-                    <input type="text" placeholder="Email" name="email">
-                    <input type="password" placeholder="Password" name="password">
-                    <button type="submit" id="login-button">Login</button>
-
-                </form>
-                <div class="instead">
-                    <p>Don't have an account? <a href="signup" type="button">Register</a></p>
-                    <p>Forgot password? <a href="forgotPassword" type="button">Forgot</a></p>
-                    
-                </div>
-                
-            </div>
-
-        <ul class="bg-bubbles">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            </ul>
-        </div>
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/login.css" />
+    <title>MeWrite</title>
+    <script src="https://kit.fontawesome.com/97be429e98.js" crossorigin="anonymous"></script>
+  </head>
+  
+  <body>
+    <div class="dropDown">
+        <a href="/">Home</a>
+        <a href="/contact">Contact</a>
+        <a href="/about">About</a>
+        <a href="/user/<%=loginORlogout%>"><%=loginORlogout%></a>
+        <a class = "back" href="#">Back</a>
+  
+      </div>
     </div>
-    <script>
-         $("#login-button").click(function(event){
-		 event.preventDefault();
-	 
-	 $('form').fadeOut(500);
-	 $('.wrapper').addClass('form-success');
-});
-    </script>
+    <div class="container">
+      <div class="topnav">
+        <div class="logo">
+          <img src="/images/MeWrite.png" alt="">
+        </div>
+        <div class="links">
+          <a href="/">Home</a>
+          <a href="/contact">Contact</a>
+          <a href="/about">About</a>
+          <a href="/user/<%=loginORlogout%>"><%=loginORlogout%></a>
+        </div>
+        <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
+      </div>
+    <div class="wrapper">
+        <div class="container">
+          <h1>Welcome Back!</h1>
+          <form class="form" method="post">
+            <input type="text" placeholder="Email" name="email" />
+            <input type="password" placeholder="Password" name="password" />
+            <button type="submit" id="login-button">Login</button>
+          </form>
+          <div class="instead">
+            <p>
+              Don't have an account? <a href="signup" type="button">Register</a>
+            </p>
+            <p>
+              Forgot password? <a href="forgotPassword" type="button">Forgot</a>
+            </p>
+          </div>
+        </div>
+        <script>
+          const hamburger = document.querySelector(".hamburger");
+          const dropDown = document.querySelector(".dropDown")
+          const back = document.querySelector(".back")
+          hamburger.addEventListener('click',()=>{
+            dropDown.style.display = "flex"
+          })
+          back.addEventListener('click',()=>{
+            dropDown.style.display = "none"
+          })
+        </script>
   </body>
 </html>
