--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,44 +1,18 @@
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300);
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@500&family=Mouse+Memoirs&family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300&family=Orbitron:wght@400;500;600;700;800;900&family=Supermercado+One&display=swap');
+
  * {
 	 box-sizing: border-box;
 	 margin: 0;
 	 padding: 0;
 	 font-weight: 300;
+	 font-family: 'Montserrat', sans-serif;
 }
 body{
-	background: #50a3a2;
-	background: -webkit-linear-gradient(top left,#50a3a2 0%,#53e3a6 100%);
-	background: -moz-linear-gradient(top left,#50a3a2 0%,#53e3a6 100%);
-	background: -o-linear-gradient(top left,#50a3a2 0%,#53e3a6 100%);
-	background: linear-gradient(top bottom left right,#50a3a2 0%,#53e3a6 100%);
+	color: #EEEEEE;
+    background-color: #222831;
   }
- body ::-webkit-input-placeholder {
-	 font-family:Source Sans Pro
-	, sans-serif;
-	 color: white;
-	 font-weight: 300;
-}
- body :-moz-placeholder {
-	 font-family:Source Sans Pro
-	, sans-serif;
-	 color: white;
-	 opacity: 1;
-	 font-weight: 300;
-}
- body ::-moz-placeholder {
-	 font-family:Source Sans Pro
-	, sans-serif;
-	 color: white;
-	 opacity: 1;
-	 font-weight: 300;
-}
- body :-ms-input-placeholder {
-	 font-family:Source Sans Pro
-	, sans-serif;
-	 color: white;
-	 font-weight: 300;
-}
- .wrapper {
+
+.wrapper {
 	 /* background: #50a3a2;
 	 background: -webkit-linear-gradient(top left,#50a3a2 0%,#53e3a6 100%);
 	 background: -moz-linear-gradient(top left,#50a3a2 0%,#53e3a6 100%);
@@ -113,153 +87,146 @@ body{
  form button:hover {
 	 background-color: #f5f7f9;
 }
- .bg-bubbles {
-	 position: absolute;
-	 top: 0;
-	 left: 0;
-	 width: 100%;
-	 height: 100%;
-	 z-index: -1;
-}
- .bg-bubbles li {
-	 position: absolute;
-	 list-style: none;
-	 display: block;
-	 width: 40px;
-	 height: 40px;
-	 background-color: rgba(255,255,255,0.15);
-	 bottom: -160px;
-	 -webkit-animation: square 25s infinite;
-	 animation: square 25s infinite;
-	 -webkit-transition-timing-function: linear;
-	 transition-timing-function: linear;
-}
- .bg-bubbles li:nth-child(1) {
-	 left: 10%;
-}
- .bg-bubbles li:nth-child(2) {
-	 left: 20%;
-	 width: 80px;
-	 height: 80px;
-	 animation-delay: 2s;
-	 animation-duration: 17s;
-}
- .bg-bubbles li:nth-child(3) {
-	 left: 25%;
-	 animation-delay: 4s;
-}
- .bg-bubbles li:nth-child(4) {
-	 left: 40%;
-	 width: 60px;
-	 height: 60px;
-	 animation-duration: 22s;
-	 background-color: rgba(255,255,255,0.25);
-}
- .bg-bubbles li:nth-child(5) {
-	 left: 70%;
-}
- .bg-bubbles li:nth-child(6) {
-	 left: 80%;
-	 width: 120px;
-	 height: 120px;
-	 animation-delay: 3s;
-	 background-color: rgba(255,255,255,0.2);
-}
- .bg-bubbles li:nth-child(7) {
-	 left: 32%;
-	 width: 160px;
-	 height: 160px;
-	 animation-delay: 7s;
-}
- .bg-bubbles li:nth-child(8) {
-	 left: 55%;
-	 width: 20px;
-	 height: 20px;
-	 animation-delay: 15s;
-	 animation-duration: 40s;
-}
- .bg-bubbles li:nth-child(9) {
-	 left: 25%;
-	 width: 10px;
-	 height: 10px;
-	 animation-delay: 2s;
-	 animation-duration: 40s;
-	 background-color: rgba(255,255,255,0.3);
-}
- .bg-bubbles li:nth-child(10) {
-	 left: 90%;
-	 width: 160px;
-	 height: 160px;
-	 animation-delay: 11s;
-}
- @-webkit-keyframes square {
-	 0% {
-		 transform: translateY(0);
-	}
-	 100% {
-		 transform: translateY(-700px) rotate(600deg);
-	}
-}
- @keyframes square {
-	 0% {
-		 transform: translateY(0);
-	}
-	 100% {
-		 transform: translateY(-700px) rotate(600deg);
-	}
-}
-header[role=banner] #logo-main {
-	 display: block;
-	 margin: 20px auto;
-	 margin-left: 42vw;
-}
- #navbar-primary.navbar-default {
-	 background: inherit;
-	 border: none;
-}
- #navbar-primary.navbar-default .navbar-nav {
-	 width: 100%;
-	 text-align: center;
-}
- #navbar-primary.navbar-default .navbar-nav 
- li {
-	 display: inline-block;
-	 float: none;
-}
- #navbar-primary.navbar-default .navbar-nav 
- li 
- a {
-	 padding-left: 30px;
-	 padding-right: 30px;
-}
-.topnav {
-	background-color: #333;
-	overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-	float: left;
-	color: #f2f2f2;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-	background-color: #ddd;
-	color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
-	background-color: #04AA6D;
-	color: white;
-  }
-  .instead{
+.instead{
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
   }
+
+  .topnav{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: #e8bb18;
+    color: #EEEEEE;
+    height: 64px;
+    z-index: 999;
+	left: 0;
+    
+}
+a:link { text-decoration: none; }
+
+
+a:visited { text-decoration: none; }
+
+
+a:hover { text-decoration: none; }
+
+
+a:active { text-decoration: none; }
+
+a{
+    color: aliceblue;
+}
+.dropDown{
+    
+    position: fixed;
+    top: 0;
+    width: 100%;
+    box-sizing: border-box;
+    /* display: flex; */
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 4rem;
+    background-color:black;
+    color: #EEEEEE;
+    height: 64px;
+    z-index: 1000;
+    opacity: 0.8;
+    display: none;
+}
+.hamburger{
+    display: none;
+    font-size: 3.5rem;
+    position: fixed;
+    top: 0.1%;
+    right: 5%;
+
+}
+.dropDown a{
+    color: #EEEEEE;
+}
+
+.links{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: space-evenly;
+}
+.logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.topnav a{
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+@media (max-width: 1140px) {
+    .blog_Container{
+        display: grid;
+        /* padding: 2.5 2.5rem; */
+        grid-template-columns: 1fr 1fr;
+        grid-auto-rows: 250px;
+        column-gap: 2vw;
+        row-gap: 10px;
+    }
+  }
+  
+  @media (max-width: 780px) {
+    .blog_Container{
+        display: grid;
+        /* padding: 0 2.5rem; */
+        grid-template-columns: 1fr;
+        grid-auto-rows: 250px;
+        column-gap: 10px;
+        row-gap: 10px;
+        transition: 0.5s ease;
+    }
+    .links{
+        display: none;
+    }
+    .hamburger{
+        display: block;
+    }
+  }
+
+  @media (max-width: 600px) {
+    .blog_Container{
+        grid-auto-rows: 200px;
+
+    }
+  }
+
+  .post_Content_Container{
+    height: calc(100vh-160px);
+  }
+
+  .post__Container{
+    position: absolute;
+    padding: 3rem 0;
+    margin-top: 64px;
+    
+    width: 100%;
+    position: relative;
+    color:#EEEEEE ;
+    width: 100%;
+  }
+
+  .topnav a{
+    transform: scale(1.5);
+}
+
+.topnav a:hover{
+    transform: scale(1.2);
+    color: #00ADB5;
+}
+
