--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/css/home.css" />
-  <title>MeWrite/title>
+  <title>MeWrite</title>
   <script src="https://kit.fontawesome.com/97be429e98.js" crossorigin="anonymous"></script>
 </head>
 
